// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator erd {
  provider = "prisma-erd-generator"
  output   = "../ERD.svg"
  theme    = "default"
}

generator prismabox {
  provider                    = "prismabox"
  // you can optionally specify the output location. Defaults to ./prismabox
  output                      = "../src/generated/prismabox"
  // if you want, you can customize the imported variable name that is used for the schemes. 
  // Defaults to "Type" which is what the standard typebox package offers
  typeboxImportVariableName   = "t"
  // you also can specify the dependency from which the above import should happen. 
  // This is useful if a package re-exports the typebox package and you would like to use that
  typeboxImportDependencyName = "elysia"
  // by default the generated schemes do not allow additional properties. You can allow them 
  // by setting this to true
  additionalProperties        = true
  // optionally enable the data model generation. See the data model section below for more info
  inputModel                  = true
}

// README 
// WE HAVE NAMING CONVENTION!!!!!!!!
// so untuk code agar native convention js:
// Nama tabel: PascalCase
// Nama kolom: camelCase
// tambahan semua kolom akan punya id, semua menggunakan
// cuid (string), regardless of table

// tadi untuk js, untuk database native ditujukan untuk
// memudahkan query di postgresql langsung,
// naming conventionnya berubah menjadi:
// Nama tabel: snake_case
// Nama kolom: snake_case 

// GENERATED BY BETTER-AUTH

model Session {
  id        String   @id
  expiresAt DateTime
  token     String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  ipAddress String?
  userAgent String?
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([token])
  @@index([userId])
  @@map("session")
}

model Account {
  id                    String    @id
  accountId             String
  providerId            String
  userId                String
  user                  User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  accessToken           String?
  refreshToken          String?
  idToken               String?
  accessTokenExpiresAt  DateTime?
  refreshTokenExpiresAt DateTime?
  scope                 String?
  password              String?
  createdAt             DateTime  @default(now())
  updatedAt             DateTime  @updatedAt

  @@index([userId])
  @@map("account")
}

model Verification {
  id         String   @id
  identifier String
  value      String
  expiresAt  DateTime
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@index([identifier])
  @@map("verification")
}

// END OF GENERATED BY BETTER-AUTH

model Role {
  id          String           @id @default(cuid())
  name        String           @unique
  users       UserRole[]
  permissions RolePermission[]

  @@map("role")
}

model Permission {
  id       String           @id @default(cuid())
  resource String
  action   String
  roles    RolePermission[]

  @@unique([resource, action])
  @@map("permission")
}

model UserRole {
  id     String @id @default(cuid())
  user   User   @relation(fields: [userId], references: [id])
  userId String
  role   Role   @relation(fields: [roleId], references: [id])
  roleId String

  //weak entity
  @@unique([userId, roleId])
  @@map("user_role")
}

model RolePermission {
  id           String     @id @default(cuid())
  role         Role       @relation(fields: [roleId], references: [id])
  roleId       String
  permission   Permission @relation(fields: [permissionId], references: [id])
  permissionId String

  //weak entity
  @@unique([roleId, permissionId])
  @@map("role_permission")
}

model User {
  id String @id @default(cuid())

  name  String
  email String @unique

  emailVerified Boolean  @default(false) // punya betterauth
  image         String? // punya betterauth
  isAnonymous   Boolean? @default(false) // punya betterauth (untuk sso login)

  mahasiswa Mahasiswa?
  pegawai   Pegawai?

  userRole UserRole[]
  sessions Session[]
  accounts Account[]

  // Letter relations
  createdLetters  LetterInstance[]       @relation("CreatedLetters")
  archivedLetters LetterInstance[]       @relation("ArchivedLetters")
  approvalSteps   LetterApprovalStep[]   @relation("ApprovalStepActor")
  signatures      Signature[]
  notifications   Notification[]

  createdAt DateTime? @default(now())
  updatedAt DateTime? @updatedAt
  deletedAt DateTime?

  @@map("user")
}

model Mahasiswa {
  id  String @id @default(cuid())
  nim String @unique

  tahunMasuk   String
  noHp         String
  alamat       String?
  tempatLahir  String?
  tanggalLahir DateTime?

  userId         String        @unique
  user           User          @relation(fields: [userId], references: [id])
  departemenId   String
  departemen     Departemen?   @relation(fields: [departemenId], references: [id])
  programStudiId String
  programStudi   ProgramStudi? @relation(fields: [programStudiId], references: [id])

  @@map("mahasiswa")
}

model Pegawai {
  id      String  @id @default(cuid())
  nip     String
  jabatan String
  noHp    String?

  userId         String        @unique
  user           User          @relation(fields: [userId], references: [id])
  departemenId   String?
  departemen     Departemen?   @relation(fields: [departemenId], references: [id])
  programStudiId String?
  programStudi   ProgramStudi? @relation(fields: [programStudiId], references: [id])

  createdAt DateTime? @default(now())
  updatedAt DateTime? @updatedAt
  deletedAt DateTime?

  @@map("pegawai")
}

model Departemen {
  id   String @id @default(cuid())
  name String
  code String @unique

  programStudi ProgramStudi[]
  pegawai      Pegawai[]
  mahasiswa    Mahasiswa[]

  createdAt DateTime? @default(now())
  updatedAt DateTime? @updatedAt
  deletedAt DateTime?

  @@map("departemen")
}

enum Jenjang {
  S1
  S2
  S3
}

model ProgramStudi {
  id String @id @default(cuid())

  name String
  code String @unique

  departemenId String
  departemen   Departemen @relation(fields: [departemenId], references: [id])

  pegawai   Pegawai[]
  mahasiswa Mahasiswa[]

  createdAt DateTime? @default(now())
  updatedAt DateTime? @updatedAt
  deletedAt DateTime?

  @@map("program_studi")
}

model Attachment {
  id String @id @default(cuid())

  filename     String
  originalName String
  mimeType     String?
  size         Int?
  url          String

  letterInstanceId String?
  letterInstance   LetterInstance? @relation(fields: [letterInstanceId], references: [id], onDelete: Cascade)

  createdAt DateTime? @default(now())
  updatedAt DateTime? @updatedAt
  deletedAt DateTime?

  @@map("attachment")
}

model LetterType {
  id          String  @id @default(cuid())
  name        String
  description String?

  templates      LetterTemplate[]
  letterInstance LetterInstance[]

  createdAt DateTime? @default(now())
  updatedAt DateTime? @updatedAt
  deletedAt DateTime?

  @@map("letter_type")
}

model LetterTemplate {
  id String @id @default(cuid())

  versionName      String   @map("version_name")
  schemaDefinition Json     @map("schema_defintion")
  formFields       Json     @map("form_fields")
  isActive         Boolean  @default(true) @map("is_active")

  letterTypeId String     @map("letter_type_id")
  LetterType   LetterType @relation(fields: [letterTypeId], references: [id])

  createdAt DateTime @default(now()) @map("created_at")

  @@map("letter_template")
}

enum FieldType {
  STRING
  NUMBER
  DATE
  FILE
  BOOLEAN
  ENUM

  @@map("field_type")
}

model LetterInstance {
  id String @id @default(cuid())

  schema         Json
  values         Json
  templateConfig Json?  @map("template_config") // Snapshot of template config at creation time
  status         LetterStatus @default(PENDING)
  currentStep    Int          @default(1)

  // Temporary agenda number (set on creation)
  temporaryAgenda String? @map("temporary_agenda")

  // Letter numbering (set by UPA at finalization)
  letterNumber String? @map("letter_number")

  // Signature (set by MTU when signing)
  signatureUrl String? @map("signature_url")

  // Final document URL (generated after signing)
  finalDocumentUrl String? @map("final_document_url")

  // Archive info (set by UPA)
  archivedAt   DateTime? @map("archived_at")
  archivedById String?   @map("archived_by_id")
  archivedBy   User?     @relation("ArchivedLetters", fields: [archivedById], references: [id])

  letterTypeId String
  letterType   LetterType @relation(fields: [letterTypeId], references: [id])
  createdById  String
  createdBy    User       @relation("CreatedLetters", fields: [createdById], references: [id])

  approvalSteps LetterApprovalStep[]
  attachments   Attachment[]
  notifications Notification[]

  createdAt DateTime  @default(now())
  updatedAt DateTime? @updatedAt

  @@map("letter_instance")
}

// Approval workflow steps
model LetterApprovalStep {
  id String @id @default(cuid())

  letterInstanceId String
  letterInstance   LetterInstance @relation(fields: [letterInstanceId], references: [id], onDelete: Cascade)

  // Step number: 1 = SA verification, 2 = MTU signing, 3 = UPA numbering
  stepNumber Int @map("step_number")

  status   ApprovalStepStatus @default(PENDING)
  comments String? // Feedback or revision notes

  // Actor who performed the action
  actorId   String? @map("actor_id")
  actor     User?   @relation("ApprovalStepActor", fields: [actorId], references: [id])
  actorRole String? @map("actor_role")

  createdAt DateTime  @default(now())
  updatedAt DateTime? @updatedAt

  @@map("letter_approval_step")
}

enum ApprovalStepStatus {
  PENDING
  APPROVED
  REJECTED
  REVISION

  @@map("approval_step_status")
}

// Signature storage for MTU
model Signature {
  id String @id @default(cuid())

  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  imageUrl  String  @map("image_url")
  isDefault Boolean @default(false) @map("is_default")

  createdAt DateTime @default(now())

  @@map("signature")
}

enum LetterStatus {
  PENDING
  IN_PROGRESS
  COMPLETED
  REJECTED

  @@map("letter_status")
}

enum StepStatus {
  DRAFT
  ACCEPTED
  VERIFIED
  REJECTED
  REVISION

  @@map("step_status")
}

enum TemplateEngine {
  HANDLEBARS
  RAW

  @@map("template_engine")
}

// Notification system
model Notification {
  id String @id @default(cuid())

  // Target user for this notification
  userId String @map("user_id")
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  // Notification type
  type NotificationType

  // Title and message
  title   String
  message String

  // Reference to the letter (if applicable)
  letterInstanceId String?         @map("letter_instance_id")
  letterInstance   LetterInstance? @relation(fields: [letterInstanceId], references: [id], onDelete: Cascade)

  // Read status
  isRead Boolean @default(false) @map("is_read")

  // Metadata (optional extra data as JSON)
  metadata Json?

  createdAt DateTime @default(now()) @map("created_at")

  @@index([userId, isRead])
  @@index([userId, createdAt])
  @@map("notification")
}

enum NotificationType {
  LETTER_SUBMITTED        // Mahasiswa submitted a letter
  NEEDS_VERIFICATION      // SA needs to verify
  NEEDS_SIGNATURE         // MTU needs to sign
  NEEDS_NUMBERING         // UPA needs to number
  REVISION_REQUIRED       // Letter needs revision
  LETTER_REJECTED         // Letter was rejected
  LETTER_COMPLETED        // Letter is completed
  LETTER_VERIFIED         // Letter verified by SA
  LETTER_SIGNED           // Letter signed by MTU

  @@map("notification_type")
}

model Jwks {
  id         String    @id
  publicKey  String
  privateKey String
  createdAt  DateTime
  expiresAt  DateTime?

  @@map("jwks")
}
